--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
             <a href="#">Pack de textures</a>
         </div>
     </header>
+    <section class="landing-image">
+        <img src="./img/images/bg-1.png" alt="Capture d'écran d'un endroit du serveur">
+        <h3>Snowcraft : Un serveur minecraft avec une superbe communauté !</h3>
+        <a href="#"><img src="./img/svg/arrow-down.svg"></a>
+    </section>
 </body>
 </html>
