Slideshow + divers changements

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Snowcraft - Acceuil</title>
+    <title>Snowcraft - Accueil</title>
 </head>
 <body>
     <header class="header">
         <div class="links-container">
             <div class="logo"></div>
-            <a href="#">Accueil</a>
-            <a href="#">Découvrir</a>
+            <a href="/">Accueil</a>
+            <a href="#discover">Découvrir</a>
             <a href="#">Informations</a>
         </div>
         <div class="dis-pack-container">
@@ -23,7 +23,23 @@
     <section class="landing-image">
         <img src="./img/images/bg-1.png" alt="Capture d'écran d'un endroit du serveur">
         <h3>Snowcraft : Un serveur minecraft avec une superbe communauté !</h3>
-        <a href="#"><img src="./img/svg/arrow-down.svg"></a>
+        <a href="#discover"><img src="./img/svg/arrow-down.svg"></a>
     </section>
+    <section class="main-content">
+        <h1 id="discover">Découvrir Snowcraft</h1>
+        <span>Découvrir en images...</span>
+        <div class="slideshow-container">
+            <div class="slideshow">
+                <div class="slide s1"></div>
+                <div class="slide s2"></div>
+                <div class="slide s3"></div>
+                <div class="slide s4"></div>
+                <div class="slide s5"></div>
+                <div class="slide s6"></div>
+            </div>
+        </div>
+    </section>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
