Améliorations header + meilleur support mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section class="landing-image">
         <img src="./img/images/bg-1.png" alt="Capture d'écran d'un endroit du serveur">
-        <h3>Snowcraft : Un serveur minecraft avec une superbe communauté !</h3>
+        <h3 class="title">Snowcraft : Un serveur minecraft avec une superbe communauté !</h3>
         <a href="#discover"><img src="./img/svg/arrow-down.svg"></a>
     </section>
     <section class="main-content">
