Ajout du loader, update README

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <title>Snowcraft - Accueil</title>
 </head>
 <body>
+    <div class="loader">
+        <div class="icon"></div>
+    </div>
     <header class="header">
         <div class="links-container">
             <div class="logo"></div>
