Nouvelle section + pack upload

--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
                 <div class="slide s6"></div>
             </div>
         </div>
+        <span>Découvrir par le Discord...</span>
+        <div class="discord-container">
+            <img src="./img/svg/discord.svg">
+            <button>
+                <span>Rejoindre le Discord !</span>
+            </button>
+        </div>
+        <div class="pack-container">
+            <img src="./img/svg/packing.svg">
+            <button>
+                <span>Télécharger le pack de textures !</span>
+            </button>
+        </div>
     </section>
 
     <script src="./js/app.js"></script>
