--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div class="logo"></div>
             <a href="/">Accueil</a>
             <a href="#discover">Découvrir</a>
-            <a href="#">Informations</a>
+            <a href="#infos">Informations</a>
         </div>
         <div class="dis-pack-container">
-            <a href="#">Discord</a>
-            <a href="#">Pack de textures</a>
+            <a href="#discord">Discord</a>
+            <a href="#pack">Pack de textures</a>
         </div>
     </header>
     <section class="landing-image">
@@ -56,18 +56,20 @@
             </div>
         </div>
         <span>Découvrir par le Discord...</span>
-        <div class="discord-container">
+        <div class="discord-container" id="discord">
             <img src="./img/svg/discord.svg">
             <button>
                 <span>Rejoindre le Discord !</span>
             </button>
         </div>
-        <div class="pack-container">
+        <div class="pack-container" id="pack">
             <img src="./img/svg/packing.svg">
             <button>
                 <span>Télécharger le pack de textures !</span>
             </button>
         </div>
+        <h1 id="infos">Informations</h1>
+        <p>A vous de me dire quoi rajouter...</p>
     </section>
 
     <script src="./js/app.js"></script>
